tests/symbol/symbol.exp
Error: symbol.js:4
  4: var WAT = Symbol('foo', 'bar'); // Error - unused argument
                             ^^^^^ unused function argument
   89:   static (value?:any): Symbol;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:89


Found 1 error
